# rag-qa-CI-CD

./: README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
app/: config.py
app/core/: documents_processor.py
app/utils/: logger.py
